[tool.poetry]
name = "machine-learning-playground"
version = "0.1.0"
description = ""
authors = ["DHG <duyhung8a2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.1.4"
notebook = "^7.0.6"


[tool.poetry.group.dev.dependencies]
pyright = "^1.1.345"
ruff = "^0.1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
